--- a/hex.html
+++ b/hex.html
@@ -14,11 +14,12 @@
   </head>
   <body>
     
+    
     <nav>
       <div class="container1">
         <h3>Colour flipper</h3>
         <ul class="container2">
-          <li><a href="simple.html">Simple</a></li>
+          <li><a href="index.html">Simple</a></li>
           <li><a href="hex.html">Hex</a></li>
         </ul>
       </div>
@@ -30,6 +31,6 @@
         <button type="button" id="mybtns" class="btn btn-secondary btn-lg">Click here</button>
       </div>
     </main>
-    <script src="pr3.js"></script>
+    <script src="hex.js"></script>
   </body>
 </html>
